<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.hoangduy.japanese4you.VocabularyDetail">


    <RelativeLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >

        <TextView
            android:id="@+id/tvKanji"
            android:layout_width="200dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_height="110dp"
            android:src="@drawable/kin"
            android:text="時間"
            android:textSize="40sp"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tvKana"
            android:textColor="@color/colorToolbarBg"
            android:text="@string/activity_vocaDetail_textKana_name"
            android:textSize="@dimen/activity_vocaDetail_text_fontsize"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tvKanji" />
        <TextView
            android:text=" いえ"
            android:gravity="center"
            android:id="@+id/tvHira"
            android:textColor="@android:color/black"
            android:layout_below="@+id/tvKana"
            android:layout_toRightOf="@id/tvKanji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="center"
            android:id="@+id/tvRomanji"
            android:textColor="@color/colorToolbarBg"
            android:layout_toRightOf="@+id/tvKanji"
            android:text="@string/activity_vocaDetail_textRomanji_name"
            android:textSize="@dimen/activity_vocaDetail_text_fontsize"
            android:layout_below="@+id/tvHira"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text=" ie"
            android:gravity="center"
            android:id="@+id/tvRoman"
            android:textColor="@android:color/black"
            android:layout_below="@+id/tvRomanji"
            android:layout_toRightOf="@id/tvKanji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <TextView
        android:background="@color/colorBackgroundText"
        android:gravity="center"
        android:textColor="@color/colorToolbarBg"
        android:text="@string/activity_vocaDetail_textMeaningandType_name"
        android:textSize="@dimen/activity_vocaDetail_textTitle_fontsize"
        android:id="@+id/tvMeaningTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame"

        />
    <TextView
        android:text="NOUN"
        android:gravity="center"
        android:id="@+id/tvType"
        android:textColor="@android:color/black"
        android:layout_below="@+id/tvMeaningTitle"
        android:textSize="@dimen/activity_vocaDetail_texttypeandMeaning_fontsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@+id/tvType"
        android:gravity="center"
        android:id="@+id/tvMeaning"
        android:textColor="@android:color/black"
        android:text="house; residence; family; home; dwelling; household"
        android:textSize="@dimen/activity_vocaDetail_texttypeandMeaning_fontsize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@color/colorBackgroundText"
        android:gravity="center"
        android:textColor="@color/colorToolbarBg"
        android:text="@string/activity_vocaDetail_textExample_name"
        android:textSize="@dimen/activity_vocaDetail_textTitle_fontsize"
        android:id="@+id/tvExampleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMeaning"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@+id/tvExampleTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
